--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "minesweeper.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
