--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "minesweeper node packages",
   "main": "minesweeper.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib"
   },
   "repository": {
